# aws-lambda-python-template

./: README.md  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml
cdk/handler/: cdk.json  package-lock.json  package.json
cdk/handler/lib/: handler-stack.ts
cdk/handler/test/: handler.test.ts
docker/lambda/: Dockerfile  lambda.Dockerfile
scripts/: curl_test.sh
src/: app.py
src/aws_lambda_python_template/: __init__.py
src/lib/: types.py
tests/: test_handler.py
