[project]
name = "aws-lambda-python-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nishide-dev", email = "nishide.dev@gmail.com" }
]
dependencies = [
    "fastapi>=0.110.2",
    "mangum>=0.17.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "pre-commit>=3.7.0",
    "ruff>=0.3.5",
    "pytest-asyncio>=0.23.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aws_lambda_python_template"]
